@@ -1,8 +1,8 @@
 Package: TSCAN
 Type: Package
 Title: Tools for Single-Cell Analysis
-Version: 1.27.2
-Date: 2020-09-20
+Version: 1.27.3
+Date: 2020-10-10
 Authors@R: c(
         person("Zhicheng", "Ji", role=c("aut", "cre"), email="zji4@jhu.edu"),
         person("Hongkai", "Ji", role=c("aut")),
