@@ -8,6 +8,7 @@ export(exprmclust)
 export(mapCellsToEdges)
 export(orderCells)
 export(orderscore)
+export(perCellEntropy)
 export(plotmclust)
 export(preprocess)
 export(quickPseudotime)
@@ -17,6 +18,7 @@ export(singlegeneplot)
 export(testPseudotime)
 exportMethods(createClusterMST)
 exportMethods(mapCellsToEdges)
+exportMethods(perCellEntropy)
 exportMethods(quickPseudotime)
 exportMethods(reportEdges)
 exportMethods(testPseudotime)
@@ -30,10 +32,15 @@ import(methods)
 import(mgcv)
 import(plyr)
 import(shiny)
+importClassesFrom(DelayedArray,SparseArraySeed)
+importClassesFrom(Matrix,dgCMatrix)
 importClassesFrom(SingleCellExperiment,SingleCellExperiment)
 importClassesFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(DelayedArray,DelayedArray)
+importFrom(DelayedArray,blockApply)
+importFrom(DelayedArray,colAutoGrid)
 importFrom(DelayedArray,rowsum)
+importFrom(Matrix,colSums)
 importFrom(Matrix,t)
 importFrom(Matrix,which)
 importFrom(S4Vectors,DataFrame)
